RESOLVED FIXED233991
REGRESSION(r286556): DeviceOrientationUpdateProvider.h is only available in iOS
https://bugs.webkit.org/show_bug.cgi?id=233991
Summary REGRESSION(r286556): DeviceOrientationUpdateProvider.h is only available in iOS
Diego Pino
Reported 2021-12-08 00:09:23 PST
REGRESSION(r24488): DeviceOrientationUpdateProvider.h is only available in iOS
Attachments
[fast-cq] Patch (1.11 KB, patch)
2021-12-08 00:10 PST, Diego Pino
no flags
[fast-cq] Patch (1.11 KB, patch)
2021-12-08 00:21 PST, Diego Pino
no flags
Diego Pino
Comment 1 2021-12-08 00:10:32 PST
Created attachment 446320 [details] [fast-cq] Patch
Diego Pino
Comment 2 2021-12-08 00:12:53 PST
To trigger the compilation error, I built WebKitGTK (trunk) with flag `--orientation-events`.
Diego Pino
Comment 3 2021-12-08 00:21:14 PST
Created attachment 446325 [details] [fast-cq] Patch
EWS
Comment 4 2021-12-08 00:30:02 PST
Committed r286646 (244959@main): <https://commits.webkit.org/244959@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 446325 [details].
Radar WebKit Bug Importer
Comment 5 2021-12-08 00:31:25 PST
Note You need to log in before you can comment on or make changes to this bug.