REGRESSION(r286556): DeviceOrientationUpdateProvider.h is only available in iOS https://bugs.webkit.org/show_bug.cgi?id=233991

Unreviewed build fix.


* page/PageConfiguration.h:



Canonical link: https://commits.webkit.org/244959@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286646 268f45cc-cd09-0410-ab3c-d52691b4dbfc